--- a/package.json
+++ b/package.json
@@ -6,14 +6,42 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "npx drizzle-kit push:pg",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "@clerk/nextjs": "^6.11.1",
+    "@google-cloud/vision": "^5.1.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.3",
+    "emoji-picker-react": "^4.12.0",
+    "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
+    "next": "15.1.6",
+    "next-themes": "^0.4.6",
+    "pg": "^8.13.3",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-csv": "^2.2.2",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.55.0",
+    "recharts": "^2.15.1",
+    "sonner": "^1.7.4",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.30.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
